fix:MET-1652 remove reward percentage in some pool response